tests/zer_fail/dalpha14_fxsave_wrong_type.zer
// EXPECTED: compile error
// @cpu_fxsave argument must be pointer or array

i32 main() {
    u64 scalar = 0;
    @cpu_fxsave(scalar);  // error: scalar, not pointer
    return 0;
}
